@@ -115,6 +115,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12423. Handle failure of registering shutdownhook by
     ShutdownHookManager in static block (Abhishek Agarwal via vinayakumarb)
 
+    HADOOP-12903. IPC Server should allow suppressing exception logging by
+    type, not log 'server too busy' messages. (Arpit Agarwal)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
